make sure all headers are invisible until authorized to login

--- a/mobileapp/www/css/index.css
+++ b/mobileapp/www/css/index.css
@@ -472,6 +472,7 @@ input[type="password"]:focus {
    position: fixed;
    top: 0;
    width: 100vw;
+   display: none;
 }
 
 .header-wrap {
